tests/snapshots/yaml_suite_snapshots__yaml_suite_2SXE_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Anchors With Colon in Name
  from: Mailing List Discussion
  tags: alias edge mapping 1.3-err
  yaml: "&a: key: &a value\nfoo:\n  *a:\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL &a: :key\n   =VAL &a :value\n   =VAL :foo\n   =ALI *a:\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"key\": \"value\",\n  \"foo\": \"key\"\n}\n"
  dump: "&a: key: &a value\nfoo: *a:\n"
