tests/snapshots/yaml_suite_snapshots__yaml_suite_2SXE_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "&a: key: &a value\nfoo: *a:\n"
  from: Mailing List Discussion
  json: "{\n  \"key\": \"value\",\n  \"foo\": \"key\"\n}\n"
  name: Anchors With Colon in Name
  tags: alias edge mapping 1.3-err
  tree: "+STR\n +DOC\n  +MAP\n   =VAL &a: :key\n   =VAL &a :value\n   =VAL :foo\n   =ALI *a:\n  -MAP\n -DOC\n-STR\n"
  yaml: "&a: key: &a value\nfoo:\n  *a:\n"
