tests/snapshots/yaml_suite_snapshots__yaml_suite_33X3_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "---\n- !!int 1\n- !!int -2\n- !!int 33\n"
  from: IRC
  json: "[\n  1,\n  -2,\n  33\n]\n"
  name: Three explicit integers in a block sequence
  tags: sequence tag
  tree: "+STR\n +DOC ---\n  +SEQ\n   =VAL <tag:yaml.org,2002:int> :1\n   =VAL <tag:yaml.org,2002:int> :-2\n   =VAL <tag:yaml.org,2002:int> :33\n  -SEQ\n -DOC\n-STR\n"
  yaml: "---\n- !!int 1\n- !!int -2\n- !!int 33\n"
